<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.bodymassindex.viewModel.BmiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_bmi"
            android:layout_width="49dp"
            android:layout_height="41dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/LiveBmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/LiveBmi"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/icons8_bmi_64" />

        <ImageView
            android:id="@+id/icon_Sex"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/Weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Weight"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/icons8_peso_64__1_" />


        <TextView
            android:id="@+id/Intro"
            android:layout_width="393dp"
            android:layout_height="32dp"
            android:layout_marginTop="92dp"
            android:text="@string/Introduction"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LiveBmi"
            android:layout_width="213dp"
            android:layout_height="37dp"
            android:layout_marginTop="88dp"
            android:text="@{viewModel.liveBmi.toString()}"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Intro" />

        <EditText
            android:id="@+id/Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/Weight"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.726"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LiveBmi" />


        <ImageView
            android:id="@+id/icon_height"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/Height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Height"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/icons8_altezza_64" />

        <EditText
            android:id="@+id/Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/Height"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:maxLength="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Weight" />

        <ImageView
            android:id="@+id/icon_sex"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/Sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Sex"
            app:layout_constraintVertical_bias="0.451"
            app:srcCompat="@drawable/icons8_sesso_50" />

        <RadioGroup
            android:id="@+id/Sex"
            android:layout_width="173dp"
            android:layout_height="108dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.701"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Height">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Men"
                android:textAlignment="center"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Women"
                android:textAlignment="center"
                android:textStyle="bold" />
        </RadioGroup>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Floating Action Button"
            android:src="@drawable/icons8_grafico_64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/CalculateButton"
            android:layout_width="128dp"
            android:layout_height="52dp"
            android:layout_marginTop="52dp"
            android:text="@string/ButtonCalculte"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Sex" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>